--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7"
+  },
+  "engines": { 
+    "node": "4.1.1" 
   }
 }
