--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "halosis-next-app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "lint": "next lint",
     "start": "next start -p $PORT",
     "heroku-postbuild": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,8 +21,5 @@
   "devDependencies": {
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7"
-  },
-  "engines": { 
-    "node": "4.1.1" 
   }
 }
