--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "halosis-next-app",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -19,7 +18,10 @@
     "zustand": "^3.6.8"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
